Table olist_customers {
  customer_id varchar(50) [pk]
  customer_unique_id varchar(50)
  customer_zip_code_prefix varchar(50)
  customer_city varchar(50)
  customer_state varchar(10)
}

Table olist_orders {
  order_id varchar(50) [pk]
  customer_id varchar(50)
  order_status varchar(20)
  order_purchase_timestamp timestamp
  order_approved_at timestamp
  order_delivered_carrier_date timestamp
  order_delivered_customer_date timestamp
  order_estimated_delivery_date timestamp
}

Table olist_geolocation {
  geolocation_zipcode_prefix varchar
  geolocation_lat float
  geolocation_lng float
  geolocation_city varchar(50)
  geolocation_state varchar(10)
}
Table olist_order_items {
  order_id varchar(50)
  order_item_id int
  product_id varchar(50)
  seller_id varchar(50)
  shipping_limit_date timestamp
  price decimal
  freight_value decimal
}

Table olist_products {
  product_id varchar(50) [pk]
  product_category_name varchar(50)
  product_name_length int
  product_description_length int
  product_photos_qty int
  product_weight_g int
  product_length_cm int
  product_height_cm int
  product_width_cm int
}
Table olist_sellers {
  seller_id varchar(50) [pk]
  seller_zip_code_prefix varchar(50)
  seller_city varchar(50)
  seller_state varchar(10)
}
Table product_category_name_translation {
  product_category_name varchar(50) [pk]
  product_category_name_english varchar(50)
}
Table olist_order_payments {
  order_id varchar(50)
  payment_sequential int
  payment_type varchar(50)  
  payment_installments int
  payment_value decimal
}
Table olist_order_reviews {
  review_id varchar(50) [pk]
  order_id varchar(50)
  review_score int
  review_comment_title varchar(50)
  review_comment_message text
  review_creation_date timestamp
  review_answer_timestamp timestamp
}

Ref : olist_customers.customer_id > olist_orders.customer_id
Ref : olist_orders.order_id > olist_order_items.order_id
Ref : olist_products.product_id > olist_order_items.product_id
Ref : olist_sellers.seller_id > olist_order_items.seller_id
Ref : olist_orders.order_id > olist_order_payments.order_id
Ref : olist_customers.customer_zip_code_prefix <> olist_geolocation.geolocation_zipcode_prefix
Ref : olist_sellers.seller_zip_code_prefix <> olist_geolocation.geolocation_zipcode_prefix
Ref : product_category_name_translation.product_category_name> olist_products.product_category_name
Ref : olist_orders.order_id > olist_order_reviews.order_id
